cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-prometheus-to-kube-system
  namespace: kube-system
specs:
- endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
        prometheus: prometheus-agent
    toPorts:
    - ports:
      - port: "8888"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: /metrics
